vlib/v/parser/tests/struct_missing_mut_section_colon_err.vv
struct Foo {
}

struct Bar {
	mut foos []Foo
}

fn main() {}
